<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/settings"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/sync"
        android:showAsAction="ifRoom|withText"
        android:title="@string/sync"/>
    <item
        android:id="@+id/action_reset"
        android:icon="@drawable/reset_pwd"
        android:showAsAction="ifRoom|withText"
        android:title="@string/reset"/>
    <item
        android:id="@+id/action_message"
        android:icon="@drawable/message_icon"
        android:showAsAction="ifRoom|withText"
        android:title="@string/message"/>
    
    <item
        android:id="@+id/action_reset_db"
        android:icon="@drawable/message_icon"
        android:showAsAction="ifRoom|withText"
        android:title="@string/rest_db"/>
</menu>