<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dip"
    android:orientation="vertical" android:layout_marginRight="10dip" android:layout_marginTop="10dip">
    <TextView android:id="@+id/appname" android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:text="@string/app_name" android:textIsSelectable="false" android:textSize="24sp"
        android:layout_alignParentTop="true"/>
    <TextView android:id="@+id/line" android:layout_width="fill_parent" android:layout_height="2dip"
        android:textIsSelectable="false" android:background="@color/orange" android:layout_below="@+id/appname"/>
    <TextView android:id="@+id/username_l" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/usernm" android:textIsSelectable="false" android:textSize="20sp"
        android:layout_below="@+id/line" android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@+id/username_f" android:layout_marginRight="5dip"/>
    <TextView android:id="@+id/password_l" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/passwrd" android:textIsSelectable="false" android:textSize="20sp"
        android:layout_below="@+id/username_l" android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@+id/password_f" android:layout_marginRight="5dip"/>
    <EditText android:id="@+id/username_f" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_below="@+id/line" android:layout_alignParentRight="true" android:hint="@string/username_email"
        android:layout_marginTop="10dip"/>
    <EditText android:id="@+id/password_f" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_below="@+id/username_f" android:layout_alignParentRight="true" android:hint="@string/password"
        android:layout_alignLeft="@+id/username_f" android:inputType="textPassword"/>
    
    <Button android:id="@+id/login_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="@drawable/button_blue" android:text="@string/login" android:textSize="24sp"
        android:layout_below="@+id/password_f" android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"/>
    <LinearLayout android:id="@+id/version_l" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:layout_below="@+id/login_btn">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
            android:text="@string/version" android:textSize="24sp" android:layout_marginTop="10dp"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content"
	        android:text="@string/v_number" android:textSize="24sp" android:layout_marginTop="10dp"
	        android:textStyle="bold|italic" android:layout_marginLeft="7dip"/>
    </LinearLayout>
    
</RelativeLayout>