<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
	    android:layout_width="match_parent" android:layout_height="wrap_content"
	    android:orientation="vertical" android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip">
	    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	        android:text="@string/rst_title"/>
	    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	        android:id="@+id/rst_header"/>
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
	    	android:orientation="vertical" android:layout_marginLeft="5dip"
	    	android:layout_marginRight="5dip" android:layout_marginTop="5dip">
	        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:text="@string/rst_question"/>
	        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:id="@+id/rst_question"/>
	        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:id="@+id/rst_question_text"/>
	    </LinearLayout>
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
	    	android:orientation="vertical" android:layout_marginLeft="5dip"
	    	android:layout_marginRight="5dip" android:layout_marginTop="5dip">
	        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:text="@string/rst_answer"/>
	        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:id="@+id/rst_answer" android:hint="@string/rst_answer"/>
	    </LinearLayout>
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
	    	android:orientation="horizontal" android:layout_marginLeft="5dip"
	    	android:layout_marginRight="5dip" android:layout_marginTop="5dip">
	        <Button android:id="@+id/cancel_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"
	            android:text="@android:string/cancel" android:layout_weight="1"/>
	        <Button android:id="@+id/ok_reset" android:layout_width="wrap_content" android:layout_height="wrap_content"
	            android:text="@string/reset" android:layout_weight="1" android:layout_marginRight="7dip"/>
	        
	    </LinearLayout>
	    
	</LinearLayout>
</ScrollView>

