<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout 
	    android:layout_width="match_parent" android:layout_height="wrap_content"
	    android:orientation="vertical" android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip">
	    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	        android:text="@string/chg_title"/>
	    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	        android:id="@+id/chg_header" android:textSize="20sp" android:textColor="@color/red"/>
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
	    	android:orientation="vertical" android:layout_marginLeft="5dip"
	    	android:layout_marginRight="5dip" android:layout_marginTop="5dip">
	        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:text="@string/chg_oldpwd"/>
	        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:hint="@string/chg_oldpwd" android:id="@+id/old_password" android:inputType="textPassword"/>
	    </LinearLayout>
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
	    	android:orientation="vertical" android:layout_marginLeft="5dip"
	    	android:layout_marginRight="5dip" android:layout_marginTop="5dip">
	        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:text="@string/chg_newpwd"/>
	        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:hint="@string/chg_newpwd" android:id="@+id/new_password" android:inputType="textPassword"/>
	    </LinearLayout>
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
	    	android:orientation="vertical" android:layout_marginLeft="5dip"
	    	android:layout_marginRight="5dip" android:layout_marginTop="5dip">
	        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:text="@string/chg_confrimpwd"/>
	        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:hint="@string/chg_confrimpwd" android:id="@+id/confrim_password" android:inputType="textPassword"/>
	    </LinearLayout>
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" 
	        android:orientation="horizontal" android:layout_marginLeft="5dip"
	    	android:layout_marginRight="5dip" android:layout_marginTop="5dip">
	        <Button android:id="@+id/cancel_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"
	            android:text="@android:string/cancel" android:layout_weight="1"/>
	        <Button android:id="@+id/ok_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"
	            android:text="@android:string/ok" android:layout_weight="1" android:layout_marginRight="7dip"/>
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>

